tests/snapshots/snapshot_fixtures__fixtures_cfg__common_directives.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.cfg/common_directives.c" (c, x86_64-unknown-linux-gnu)
global __const.main.pair : rec_included_pair = {41, 2} [cir_private, default, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_included_pair, "pair", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.pair : rec_included_pair*
    copy %1, %3
    %4 = get_member %1[0] "left" : s32i*
    %5 = load %4 : s32i, align 4
    %6 = get_member %1[1] "right" : s32i*
    %7 = load %6 : s32i, align 4
    %8 = add %5, %7 : s32i [nsw]
    %9 = const 3 : s32i
    %10 = add %8, %9 : s32i [nsw]
    %11 = const 46 : s32i
    %12 = cmp eq %10, %11 : bool
    %13 = const 0 : s32i
    %14 = const 1 : s32i
    %15 = select %12, %13, %14 : s32i
    store %15, %0
    %16 = load %0 : s32i
    return %16
}
