tests/snapshots/snapshot_fixtures__fixtures_cfg__embed_basic.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.cfg/embed_basic.c" (c, x86_64-unknown-linux-gnu)
global __const.main.empty : u8i[1] = [7] [cir_private, default, dso_local, constant]
global __const.main.data : u8i[4] = [9, 65, 66, 8] [cir_private, default, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u8i[4], "data", align 1
    %2 = alloca u8i[1], "empty", align 1
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @__const.main.data : u8i[4]*
    copy %1, %4
    %5 = get_global @__const.main.empty : u8i[1]*
    copy %2, %5
    %6 = const 4 : u64i
    %7 = const 4 : u64i
    %8 = cmp eq %6, %7 : bool
    %9 = ternary %8 ? { : bool
        %52 = const 0 : s64i
        %53 = get_element %1[%52] : u8i*
        %54 = load %53 : u8i, align 1
        %55 = cast(integral) %54 : s32i
        %56 = const 9 : s32i
        %57 = cmp eq %55, %56 : bool
        yield %57
    } : {
        %51 = const #false : bool
        yield %51
    }
    %10 = ternary %9 ? { : bool
        %45 = const 1 : s64i
        %46 = get_element %1[%45] : u8i*
        %47 = load %46 : u8i, align 1
        %48 = cast(integral) %47 : s32i
        %49 = const 65 : s32i
        %50 = cmp eq %48, %49 : bool
        yield %50
    } : {
        %44 = const #false : bool
        yield %44
    }
    %11 = ternary %10 ? { : bool
        %38 = const 2 : s64i
        %39 = get_element %1[%38] : u8i*
        %40 = load %39 : u8i, align 1
        %41 = cast(integral) %40 : s32i
        %42 = const 66 : s32i
        %43 = cmp eq %41, %42 : bool
        yield %43
    } : {
        %37 = const #false : bool
        yield %37
    }
    %12 = ternary %11 ? { : bool
        %31 = const 3 : s64i
        %32 = get_element %1[%31] : u8i*
        %33 = load %32 : u8i, align 1
        %34 = cast(integral) %33 : s32i
        %35 = const 8 : s32i
        %36 = cmp eq %34, %35 : bool
        yield %36
    } : {
        %30 = const #false : bool
        yield %30
    }
    %13 = ternary %12 ? { : bool
        %27 = const 1 : u64i
        %28 = const 1 : u64i
        %29 = cmp eq %27, %28 : bool
        yield %29
    } : {
        %26 = const #false : bool
        yield %26
    }
    %14 = ternary %13 ? { : bool
        %20 = const 0 : s64i
        %21 = get_element %2[%20] : u8i*
        %22 = load %21 : u8i, align 1
        %23 = cast(integral) %22 : s32i
        %24 = const 7 : s32i
        %25 = cmp eq %23, %24 : bool
        yield %25
    } : {
        %19 = const #false : bool
        yield %19
    }
    %15 = const 0 : s32i
    %16 = const 1 : s32i
    %17 = select %14, %15, %16 : s32i
    store %17, %0
    %18 = load %0 : s32i
    return %18
}
