tests/snapshots/snapshot_fixtures__fixtures_cfg__feature_multiple.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.cfg/feature_multiple.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[7] = "%d %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn first_code() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %13 = alloca s32i, "__retval", align 4
    %14 = const 2 : s32i
    store %14, %13
    %15 = load %13 : s32i
    return %15
}
fn second_code() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %10 = alloca s32i, "__retval", align 4
    %11 = const 4 : s32i
    store %11, %10
    %12 = load %10 : s32i
    return %12
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[7]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @first_code() : s32i [all]
    %6 = call @second_code() : s32i [all]
    %7 = call @printf(%4, %5, %6) : s32i [all]
    %8 = const 0 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
